[project]
name = "dps150"
version = "0.1.0"
description = "Python API, CLI, and MCP server for the FNIRSI DPS-150 power supply"
requires-python = ">=3.10"
dependencies = ["pyserial"]

[project.optional-dependencies]
mcp = ["fastmcp"]

[project.scripts]
dps150 = "dps150:_cli"

[tool.setuptools]
py-modules = ["dps150", "dps150_mcp"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
